--- a/garidakho/package.json
+++ b/garidakho/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-slideshow-image": "^3.2.0",
     "react-swipeable-views": "^0.13.9"
   },
   "scripts": {
