--- a/garidakhoadmin/package.json
+++ b/garidakhoadmin/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^7.2.1",
     "edit-json-file": "^1.4.1",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
