2appbar problem-chartjs initiated

--- a/garidakhoadmin/package.json
+++ b/garidakhoadmin/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^22.0.0",
-    "@ckeditor/ckeditor5-react": "^2.1.0",
     "@devexpress/dx-react-chart": "^2.7.1",
     "@devexpress/dx-react-chart-material-ui": "^2.7.1",
     "@devexpress/dx-react-core": "^2.7.1",
@@ -14,8 +12,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "edit-json-file": "^1.4.1",
+    "chart.js": "^2.9.3",
+    "material-ui-cookie-consent": "^0.1.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
